TestCases/Errors/Haversine/observations/sst/aut_03_obs.spm
obs r17-c5 1e-08
obs r14-c6 0.000252620942276115
obs r15-c6 0.000596087892453651
obs r16-c6 0.00109705795770043
obs r17-c6 0.00038329402123502
obs r18-c6 0.000217727748276629
obs r14-c7 0.000294290759270159
obs r15-c7 0.000346109250593258
obs r16-c7 0.000428527147761797
obs r17-c7 0.000366643626641492
obs r19-c7 1e-08
obs r20-c7 1e-08
obs r15-c8 0.00128589798542649
obs r19-c11 1e-08
obs r11-c12 0.00472738733060195
obs r12-c12 0.00472738733060195
obs r18-c12 1e-08
obs r19-c12 1e-08
obs r18-c13 1e-08
obs r19-c14 1e-08
obs r19-c15 1e-08
obs r12-c18 0.04204726438691
obs r8-c19 0.0129640542133176
obs r10-c19 0.0137693631669535
obs r11-c19 0.0349395731502668
obs r12-c19 0.04204726438691
obs r8-c20 0.015440737552217
obs r9-c20 0.0439121517423261
obs r10-c20 0.0312007563819729
obs r11-c20 0.036563131946543
obs r8-c21 0.0202072538860104
obs r9-c21 0.0387367087742279
obs r10-c21 0.0364868269398693
obs r9-c22 0.0372736303745769
obs r10-c22 0.0439878280292472
error_value r17-c5 0.2
error_value r14-c6 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r17-c7 0.2
error_value r19-c7 0.2
error_value r20-c7 0.2
error_value r15-c8 0.2
error_value r19-c11 0.2
error_value r11-c12 0.2
error_value r12-c12 0.2
error_value r18-c12 0.2
error_value r19-c12 0.2
error_value r18-c13 0.2
error_value r19-c14 0.2
error_value r19-c15 0.2
error_value r12-c18 0.2
error_value r8-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
error_value r8-c21 0.2
error_value r9-c21 0.2
error_value r10-c21 0.2
error_value r9-c22 0.2
error_value r10-c22 0.2
